--- a/클라이언트.md
+++ b/클라이언트.md
@@ -1,116 +1,92 @@
 ** 클라이언트
 	1. 안드로이드 : 구글에 의해 개발되고 있는 모바일 운영체제. 자바, 코틀린, C, C++으로 응용프로그램 작성 가능. 
 
-		1) 역사
-2005년 7월 구글이 미국의 작은 안드로이드사 인수: 앤디 루빈이 세운 업체.
-2007년 11월 OHA(오픈 핸드셋 얼라이언스):79개 기업 및 단체가 모바일 장치의 개방형 표준을 선언. (삼성전자, LG전자, 팬택, 구글, HTC, 델, 인텔, 모토로라모빌리티, 퀄컴, 텍사스 인스트루먼츠, T-모바일 등.)-리눅스 커널 2.6에서 빌드된 첫 모바일기기 플랫폼 결과 발표=안드로이드
-2008년 10월 안드로이드가 오픈소스로 선언됨. ->아파치 라이선스로 공개
-*아파치 소프트웨어 재단
-아파치HTTP서버 포함한 아파치 소프트웨어 프로젝트를 지원하는 비영리단체. 아파치 소프트웨어 재단은 개발자들의 분산 커뮤니티이다. 그들이 개발하고 있는 소프트웨어는 아파치 라이선스 조항 아래 배포되고 자유 소프트웨어/오픈 소스 소프트웨어이어야 한다. 아파치 프로젝트는 공동 제작과 합의에 기반한 개발 프로세스와 오픈되고 실용적인 소프트웨어 라이선스라는 특징으로 규정된다. 각각의 프로젝트는 프로젝트에 공헌자로 활동하는 기술 전문가들로 구성된, 자발적으로 참여하는 팀에 의해 관리된다. 재단은 능력 위주 사회로, 재단의 멤버십은 아파치 프로젝트에 적극 활동에 기여하는 지원자들에게만 부여된다
-* 앤디 루빈
-Andrew Andy Rubin(1963~). 데인저와 안드로이드 사의 공동 창립자, 구글의 안드로이드 인수 후 구글의 모바일 부문 수석 부사장으로 일하며 안드로이드 소프트웨어 플랫폼 비롯 휴대전화 개발업무 관장. 2014년에 구글 퇴사 후 에센셜 사 창립.
-대학 졸업 후 애플에서 엔지니어로 일 시작함. 이후 휴대용기기를 위한 운영체제와 인터페이스를 만드는 제네럴매직에서 일하다 실패, 아르테미스 리서치사 설립. 이는 이후에 WebTV사가 되며 마이크로소프트가 인수합병한다.
-이후 마이크로소프트사를 나와 데인저사 설립 후 초창기 스마트폰 데인저 힙탑 만듦. 이후 데인저사 퇴사 후 안드로이드 사 설립. 이는 다시 구글에 인수되고 안드로이드 플랫폼 총 책임자, 로봇 분야 책임자로 근무. 2014년도 구글 퇴사 후 에센셜 사 설립
-
-		2) 구조 
+	1) 역사
+	2005년 7월 구글이 미국의 작은 안드로이드사 인수: 앤디 루빈이 세운 업체.
+	2007년 11월 OHA(오픈 핸드셋 얼라이언스):79개 기업 및 단체가 모바일 장치의 개방형 표준을 선언. (삼성전자, LG전자, 팬택, 구글, HTC, 델, 인텔, 모토로라모빌리티, 퀄컴, 텍사스 인스트루먼츠, T-모바일 등.)-리눅스 커널 2.6에서 빌드된 첫 모바일기기 플랫폼 결과 발표=안드로이드
+	2008년 10월 안드로이드가 오픈소스로 선언됨. ->아파치 라이선스로 공개
+ 		* 아파치 소프트웨어 재단
+			아파치HTTP서버 포함한 아파치 소프트웨어 프로젝트를 지원하는 비영리단체. 아파치 소프트웨어 재단은 개발자들의 분산 커뮤니티이다. 그들이 개발하고 있는 소프트웨어는 아파치 라이선스 조항 아래 배포되고 자유 소프트웨어/오픈 소스 소프트웨어이어야 한다. 아파치 프로젝트는 공동 제작과 합의에 기반한 개발 프로세스와 오픈되고 실용적인 소프트웨어 라이선스라는 특징으로 규정된다. 각각의 프로젝트는 프로젝트에 공헌자로 활동하는 기술 전문가들로 구성된, 자발적으로 참여하는 팀에 의해 관리된다. 재단은 능력 위주 사회로, 재단의 멤버십은 아파치 프로젝트에 적극 활동에 기여하는 지원자들에게만 부여된다
+ 		* 앤디 루빈
+ 		Andrew Andy Rubin(1963~). 데인저와 안드로이드 사의 공동 창립자, 구글의 안드로이드 인수 후 구글의 모바일 부문 수석 부사장으로 일하며 안드로이드 소프트웨어 플랫폼 비롯 휴대전화 개발업무 관장. 2014년에 구글 퇴사 후 에센셜 사 창립. 대학 졸업 후 애플에서 엔지니어로 일 시작함. 이후 휴대용기기를 위한 운영체제와 인터페이스를 만드는 제네럴매직에서 일하다 실패, 아르테미스 리서치사 설립. 이는 이후에 WebTV사가 되며 마이크로소프트가 인수합병한다. 이후 마이크로소프트사를 나와 데인저사 설립 후 초창기 스마트폰 데인저 힙탑 만듦. 이후 데인저사 퇴사 후 안드로이드 사 설립. 이는 다시 구글에 인수되고 안드로이드 플랫폼 총 책임자, 로봇 분야 책임자로 근무. 2014년도 구글 퇴사 후 에센셜 사 설립
+		
+	2) 구조
+		
+	3) 버전 
+	6개월~12개월에 한번씩 업데이트 진행(오류수정, 기능추가)
+	각 버전은 알파벳 첫 글자를 오름차순에 맞춘 디저트이름을 코드명으로 함.
+	버전은 1.0, 2.0, 3.0, 5.0…으로 올라감. 
+	앞자리 숫자: 메이저 업데이트, 뒷자리 숫자: 마이너 업데이트
+	예시) 	
+	- C : Cupcake (컵케이크) 안드로이드 버전 1.5
+	- D : Donut (도넛) 안드로이드 버전 1.6
+	- E : Éclair (이클레어(프랑스어 에클레르)) 안드로이드 버전 2.0~2.1
+	- F : Froyo (프로요(프로즌 요거트)) 안드로이드 버전 2.2~2.2.1
+	- G : Gingerbread (진저브레드) 안드로이드 버전 2.3~2.3.7
+	- H : Honeycomb (허니콤) 안드로이드 버전 3.0/3.1/3.2
+	- I : Ice Cream Sandwich (아이스크림 샌드위치) 안드로이드 버전 4.0~4.0.4
+	- J : Jellybean (젤리빈) 안드로이드 버전 4.1~4.3.1
+	- K : Kitkat (킷캣) 안드로이드 버전 4.4~4.4.4
+	- L : Lollipop (롤리팝) 안드로이드 버전 5.0~5.1.1
+	- M : Marshmallow (마시멜로) 안드로이드 버전 6.0~6.0.1
+	- N : Nougat (누가) 안드로이드 버전 7.0~7.1.2
+	- O : Oreo (오레오) 안드로이드 버전 8.0~8.1
+	- P : Pie (파이) 안드로이드 버전 9.0
+	
+	4) 특징
+	커널: 리눅스
+	개발환경: IntelliJ IDEA기반 안드로이드 스튜디오 사용 권장
+	컴파일된 바이트코드를 구동할 수 있는 런타임 라이브러리 제공.
+	안드로이드 소프트웨어 개발 키트(SDK)통해 응용 프로그램 개발에 필요한 각종 도구와 API 제공.
+	리눅스 커널 위에서 동작. 자바와 코틀린으로 작성된 소프트웨어는 안드로이드 런타임에서 실행 가능한 코드로 컴파일됨. C/C++라이브러리 포함.
+		* 커널
+		컴퓨터의 운영 체제의 핵심이 되는 컴퓨터 프로그램. 시스템의 모든 것을 통제. 운영 체제의 다른 부분 및 응용 프로그램 수행에 필요한 다양한 서비스 제공 
  
 
-		3) 버전 
-6개월~12개월에 한번씩 업데이트 진행(오류수정, 기능추가)
-각 버전은 알파벳 첫 글자를 오름차순에 맞춘 디저트이름을 코드명으로 함.
-버전은 1.0, 2.0, 3.0, 5.0…으로 올라감. 
-앞자리 숫자: 메이저 업데이트, 뒷자리 숫자: 마이너 업데이트
-예시) 	
-- C : Cupcake (컵케이크) 안드로이드 버전 1.5
-- D : Donut (도넛) 안드로이드 버전 1.6
-- E : Éclair (이클레어(프랑스어 에클레르)) 안드로이드 버전 2.0~2.1
-- F : Froyo (프로요(프로즌 요거트)) 안드로이드 버전 2.2~2.2.1
-- G : Gingerbread (진저브레드) 안드로이드 버전 2.3~2.3.7
-- H : Honeycomb (허니콤) 안드로이드 버전 3.0/3.1/3.2
-- I : Ice Cream Sandwich (아이스크림 샌드위치) 안드로이드 버전 4.0~4.0.4
-- J : Jellybean (젤리빈) 안드로이드 버전 4.1~4.3.1
-- K : Kitkat (킷캣) 안드로이드 버전 4.4~4.4.4
-- L : Lollipop (롤리팝) 안드로이드 버전 5.0~5.1.1
-- M : Marshmallow (마시멜로) 안드로이드 버전 6.0~6.0.1
-- N : Nougat (누가) 안드로이드 버전 7.0~7.1.2
-- O : Oreo (오레오) 안드로이드 버전 8.0~8.1
-- P : Pie (파이) 안드로이드 버전 9.0
-
-	4)특징
-커널: 리눅스
-개발환경: IntelliJ IDEA기반 안드로이드 스튜디오 사용 권장
-컴파일된 바이트코드를 구동할 수 있는 런타임 라이브러리 제공.
-안드로이드 소프트웨어 개발 키트(SDK)통해 응용 프로그램 개발에 필요한 각종 도구와 API 제공.
-리눅스 커널 위에서 동작. 자바와 코틀린으로 작성된 소프트웨어는 안드로이드 런타임에서 실행 가능한 코드로 컴파일됨. C/C++라이브러리 포함.
-	* 커널
-컴퓨터의 운영 체제의 핵심이 되는 컴퓨터 프로그램. 시스템의 모든 것을 통제. 운영 체제의 다른 부분 및 응용 프로그램 수행에 필요한 다양한 서비스 제공 
- 
-
-	* 리눅스 커널
-오픈 소스 모놀리딕 유닉스 계열컴퓨터 운영 체제 커널
-리누스 베네딕트 토르발스 개발
- 태블릿 컴퓨터, 스마트폰, 스마트워치를 위한 안드로이드 운영 체제는 기능 구현을 위해 리눅스 커널이 제공하는 서비스들을 사용
-GNU 운영체제(자유 소프트웨어 프로젝트)
-API 사용자 프로그램들이 커널과 통신. 매우 안정적.
-	* 리누스 베네딕트 토르발스
-소프트웨어 개발자: 리눅스 커널, 깃 최초개발
-		5)마켓
-구글 플레이: PC사용 없이 무선으로 대상 하드웨어로 다운로드와 설치가 가능한 응용 프로그램 목록을 제공.
-구글 플레이가 나오기 전, 안드로이드 마켓은 2008 8월부터 이용되었다. 2009년 12월 응용 프로그램의 개수는 2만 개를 돌파하였다. 2010년 5월 20일, T-모바일의 애플리케이션 또한 사용이 가능해졌다.
-2010년 8월 응용 프로그램의 개수는 8만개로 꾸준히 증가했다. 누적 다운로드 건 수는 10억 건을 돌파했다. 2010년에는 1달에 1만개에 가까운 새로운 응용 프로그램들이 안드로이드 마켓에 등록되는 등, 높은 증가세를 보였다.
-2010년 10월 25일에, 안드로이드 개발자 트위터 계정에서는 안드로이드 마켓에 10만개의 응용 프로그램이 등록되었다고 발표했다. 2010년 7월에 발표된 디스티모라는 회사의 조사 자료에 의하면, 안드로이드 마켓에 등록된 무료 응용 프로그램의 갯수는 전체의 57%로, 애플의 앱 스토어의 무료 응용 프로그램의 비율이 28%로임에 비해 2배 정도 높은 수치이다. 그 밖에 노키아 오비 스토어와 블랙베리 앱 월드는 26%의 무료 응용 프로그램을 가지고 있었고, 윈도의 마켓 플레이스는 22%밖에 되지 않았다.
-2010년 12월에는 사소한 업데이트가 진행되어, 마켓의 응용 프로그램 필터링이 더 강화되고, 유료 응용 프로그램의 환불 가능시간을 기존의 24시간 또는 48시간에서 15분으로 대폭 감소시켰다. 안드로이드 마켓의 UI가 변경되었다. 구글은 이번 업데이트는 안드로이드 1.6 이상의 모든 기기에 적용된다고 밝혔다.
-2011년 2월에는 안드로이드 마켓 접근을 안드로이드 탑재 기기에 한하던 것을 웹을 통하여 거의 대부분의 기기에서 접근할 수 있도록 하였다. 2011년 5월에는 마켓에 "종합 순위", "개발자 순위", "인기 응용 프로그램", 그리고 "에디터의 추천"이라는 목록이 추가되었다. 구글 관계자는 이것이 사용자들에게 최대한 많은 응용 프로그램을 보여주기 위한 시도라고 말했다.
-2012년 3월 6일 안드로이드 마켓의 이름은 구글 플레이로 변경되었다.
-|년	|월|	애플리케이션 개수|	다운로드 건수|
-|------|------|------|------|
-|2009년	|3월|	2,300개	||
-|	|12월|	16,000개	||
-|2010년	|3월|	30,000개	||
-|	|4월|	38,000개	||
-|	|8월|	80,000개 	|10억건|
-|	|10월|	100,000개	||
-|2011년	|5월|	200,000개	|30억건|
-|	|7월|	250,000	|60억건|
-|	|10월|	319,000개	||
-|	|12월|	380,297개	|100억건|
-|2012년	|1월|	400,000개	||
-|	|2월|	450,000개	||
-|	|5월|	500,000개	||
-|	|6월|	600,000개	|200억건|
-|	|9월|	675,000개	|250억건|
-|	|10월|	700,000개	||
-|2013년	|2월|	800,000개	||
-|	|4월|	850,000개	|400억건|
-|	|5월|		|480억건|
-|	|7월|	1,000,000개|	500억건|
+		* 리눅스 커널
+		오픈 소스 모놀리딕 유닉스 계열컴퓨터 운영 체제 커널. 리누스 베네딕트 토르발스 개발. 태블릿 컴퓨터, 스마트폰, 스마트워치를 위한 안드로이드 운영 체제는 기능 구현을 위해 리눅스 커널이 제공하는 서비스들을 사용. GNU 운영체제(자유 소프트웨어 프로젝트) API 사용자 프로그램들이 커널과 통신. 매우 안정적.
+		* 리누스 베네딕트 토르발스
+	소프트웨어 개발자: 리눅스 커널, 깃 최초개발
+		
+	5) 마켓
+	구글 플레이: PC사용 없이 무선으로 대상 하드웨어로 다운로드와 설치가 가능한 응용 프로그램 목록을 제공.
+	구글 플레이가 나오기 전, 안드로이드 마켓은 2008 8월부터 이용되었다. 2009년 12월 응용 프로그램의 개수는 2만 개를 돌파하였다. 2010년 5월 20일, T-모바일의 애플리케이션 또한 사용이 가능해졌다.
+	2010년 8월 응용 프로그램의 개수는 8만개로 꾸준히 증가했다. 누적 다운로드 건 수는 10억 건을 돌파했다. 2010년에는 1달에 1만개에 가까운 새로운 응용 프로그램들이 안드로이드 마켓에 등록되는 등, 높은 증가세를 보였다.
+	2010년 10월 25일에, 안드로이드 개발자 트위터 계정에서는 안드로이드 마켓에 10만개의 응용 프로그램이 등록되었다고 발표했다. 2010년 7월에 발표된 디스티모라는 회사의 조사 자료에 의하면, 안드로이드 마켓에 등록된 무료 응용 프로그램의 갯수는 전체의 57%로, 애플의 앱 스토어의 무료 응용 프로그램의 비율이 28%로임에 비해 2배 정도 높은 수치이다. 그 밖에 노키아 오비 스토어와 블랙베리 앱 월드는 26%의 무료 응용 프로그램을 가지고 있었고, 윈도의 마켓 플레이스는 22%밖에 되지 않았다.
+	2010년 12월에는 사소한 업데이트가 진행되어, 마켓의 응용 프로그램 필터링이 더 강화되고, 유료 응용 프로그램의 환불 가능시간을 기존의 24시간 또는 48시간에서 15분으로 대폭 감소시켰다. 안드로이드 마켓의 UI가 변경되었다. 구글은 이번 업데이트는 안드로이드 1.6 이상의 모든 기기에 적용된다고 밝혔다.
+	2011년 2월에는 안드로이드 마켓 접근을 안드로이드 탑재 기기에 한하던 것을 웹을 통하여 거의 대부분의 기기에서 접근할 수 있도록 하였다. 2011년 5월에는 마켓에 "종합 순위", "개발자 순위", "인기 응용 프로그램", 그리고 "에디터의 추천"이라는 목록이 추가되었다. 구글 관계자는 이것이 사용자들에게 최대한 많은 응용 프로그램을 보여주기 위한 시도라고 말했다.
+	2012년 3월 6일 안드로이드 마켓의 이름은 구글 플레이로 변경되었다.
 
 
 	2. iOS
-		1) iOS 이름의 기원
-최초에 아이폰을 위해 만들어진 OS이기 때문에 버전 3까지는 iPhone OS라는이름을 사용하다가 2010년 4번째 버전 베타가 공개되어 아이팟 터치, 아이패드, 애플TV까지 이 운영체제를 사용하게 되면서 이름을 iOS로 바꿈.
-iOS라는 단어는 원래 CISCO장비의 OS이름, 라이선스 또한 CISCO. 닌텐도 Wii의 OS이름도 iOS.
+	
+	1) iOS 이름의 기원
+	최초에 아이폰을 위해 만들어진 OS이기 때문에 버전 3까지는 iPhone OS라는이름을 사용하다가 2010년 4번째 버전 베타가 공개되어 아이팟 터치, 아이패드, 애플TV까지 이 운영체제를 사용하게 되면서 이름을 iOS로 바꿈.
+	iOS라는 단어는 원래 CISCO장비의 OS이름, 라이선스 또한 CISCO. 닌텐도 Wii의 OS이름도 iOS.
 
-		2) iOS SDK
-iOS개발을 위한 애플의 소프트웨어 개발 키트. 2008년 배포. 이를 활용해 아이폰 등에서 응용 소프트웨어를 개발 가능, 아이폰 시뮬레이터 내에서 테스트가능. 개발자는 개발한 응용 소프트웨어를 앱 스토어를 통해 유통시킬 수 있다. 이 때, 응용 소프트웨어의 가격은 최소 가격만 넘기면 그 초과 범위 내에서 자유롭게 정할 수 있다. 개발자는 응용 소프트웨어 판매 수익의 70%를 가져간다. 다른 방식으로는, 개발자는 개발한 응용 소프트웨어를 무료로 배포할 수 있다. 이 때, 개발자는 응용 소프트웨어의 배포나 배급에 대한 비용은 내지 않으며, 개발자는 멤버십 비용만을 지불하면 된다. SDK를 사용하기 위해서는 인텔 맥이 필요하다. 또한 맥 OS X v10.5가 필요하다. 마이크로소프트 윈도나 OS X의 이전 버전에서는 SDK가 작동하지 않는다.
+	2) iOS SDK
+	iOS개발을 위한 애플의 소프트웨어 개발 키트. 2008년 배포. 이를 활용해 아이폰 등에서 응용 소프트웨어를 개발 가능, 아이폰 시뮬레이터 내에서 테스트가능. 개발자는 개발한 응용 소프트웨어를 앱 스토어를 통해 유통시킬 수 있다. 이 때, 응용 소프트웨어의 가격은 최소 가격만 넘기면 그 초과 범위 내에서 자유롭게 정할 수 있다. 개발자는 응용 소프트웨어 판매 수익의 70%를 가져간다. 다른 방식으로는, 개발자는 개발한 응용 소프트웨어를 무료로 배포할 수 있다. 이 때, 개발자는 응용 소프트웨어의 배포나 배급에 대한 비용은 내지 않으며, 개발자는 멤버십 비용만을 지불하면 된다. SDK를 사용하기 위해서는 인텔 맥이 필요하다. 또한 맥 OS X v10.5가 필요하다. 마이크로소프트 윈도나 OS X의 이전 버전에서는 SDK가 작동하지 않는다.
 
-		3) 기반/구조/프로그래밍 언어
-macOS를 이용해 개발. 따라서 다윈OS를 베이스로 하며, 이는 Mach커널과 BSD커널로 이루어진 XNU 커널로 만들어졌기 때문에 일종의 유닉스 기반. 
-크게 네개의 계층. 코어 OS계층, 코어 서비스 계층, 미디어 계층, 코코아 터치 계층. 코코아, 코어 애니메이션 등의 애플리케이션 프레임워크를 포함. 멀티 터치 등 사용자 인터페이스 구현. 등
-C/C++/objective-C/swift
-	* 스위프트
-2014 발표된 애플의 iOS와 macOS를 위한 프로그래밍 언어. 크리스 라트너 개발. 기존 운영체제용 언어인 objective-C와 같이 LLVM으로 빌드되고 같은 런타임 공유. 클로저, 다중 리턴타입, 네임스페이스, 제네릭스, 타입 유추 등 이전엔 없던 기능 포함.
-	* LLVM
-컴파일러 기반구조. 컴파일 타임, 링크 타임, 런타임 상황에서 프로그램 작성 언어와 무관하게 최적화 구현하도록 구성. 원래는 low-level virtual machine의 약자였지만 성장 후 다양한 목적을 가지면서 프로젝트의 이름으로 사용. LLVM 핵심 코드는 ‘LLVM라이선스’로 배포. 이는 BSD라이선스와 비슷. (배포시 해당 소스 코드를 공개/배포할 의무 없음)
-	* 크리스 라트너
-LLVM을 만들어낸 인물. Clang 컴파일러와 프로그래밍 언어 Swift만들었다. 애플 개발자 도구부서 디렉터로 있음.
+	3) 기반/구조/프로그래밍 언어
+	macOS를 이용해 개발. 따라서 다윈OS를 베이스로 하며, 이는 Mach커널과 BSD커널로 이루어진 XNU 커널로 만들어졌기 때문에 일종의 유닉스 기반. 
+	크게 네개의 계층. 코어 OS계층, 코어 서비스 계층, 미디어 계층, 코코아 터치 계층. 코코아, 코어 애니메이션 등의 애플리케이션 프레임워크를 포함. 멀티 터치 등 사용자 인터페이스 구현. 등
+	C/C++/objective-C/swift
+		
+		* 스위프트
+		2014 발표된 애플의 iOS와 macOS를 위한 프로그래밍 언어. 크리스 라트너 개발. 기존 운영체제용 언어인 objective-C와 같이 LLVM으로 빌드되고 같은 런타임 공유. 클로저, 다중 리턴타입, 네임스페이스, 제네릭스, 타입 유추 등 이전엔 없던 기능 포함.
+		
+		* LLVM
+		컴파일러 기반구조. 컴파일 타임, 링크 타임, 런타임 상황에서 프로그램 작성 언어와 무관하게 최적화 구현하도록 구성. 원래는 low-level virtual machine의 약자였지만 성장 후 다양한 목적을 가지면서 프로젝트의 이름으로 사용. LLVM 핵심 코드는 ‘LLVM라이선스’로 배포. 이는 BSD라이선스와 비슷. (배포시 해당 소스 코드를 공개/배포할 의무 없음)
+		
+		* 크리스 라트너
+		LLVM을 만들어낸 인물. Clang 컴파일러와 프로그래밍 언어 Swift만들었다. 애플 개발자 도구부서 디렉터로 있음.
 
-		4) Apple App store
-애플의 전자 소프트웨어 유통망. 2008년 7월 500개의 애플리케이션으로 시작. 기존 ESD와의 차이는 애플과 협력관계에 있지 않은 개인/회사 개발자도 자유롭게 업로드/다운로드 가능함. 개인 개발자 기준 연 99달러 지불하면 App store에 자신이 개발한 응용 프로그램 무제한 업로드 가능. 
-2011년까지 앱스토어에 사전 등급 분류로 인해 게임 카테고리가 없었다. 이후 오픈마켓 자율심의안을 담은 게임산업진흥에 관한 법률 개정안이 통과. 게임 카테고리 정식 오픈.
-다운로드 수는 구글플레이에 뒤쳐지지만 여전히 수익은 크게 앞서고 있다.
-		5) 앱 개발
-개발 툴: Xcode. 이는 Mac에서만 사용 가능. 따라서 iOS 플랫폼 기반 개발을 하려면 최신 macOS가 지원 가능한 Mac이 있어야 함. 
+	4) Apple App store
+	애플의 전자 소프트웨어 유통망. 2008년 7월 500개의 애플리케이션으로 시작. 기존 ESD와의 차이는 애플과 협력관계에 있지 않은 개인/회사 개발자도 자유롭게 업로드/다운로드 가능함. 개인 개발자 기준 연 99달러 지불하면 App store에 자신이 개발한 응용 프로그램 무제한 업로드 가능. 
+	2011년까지 앱스토어에 사전 등급 분류로 인해 게임 카테고리가 없었다. 이후 오픈마켓 자율심의안을 담은 게임산업진흥에 관한 법률 개정안이 통과. 게임 카테고리 정식 오픈.
+	다운로드 수는 구글플레이에 뒤쳐지지만 여전히 수익은 크게 앞서고 있다.
+	5) 앱 개발
+	개발 툴: Xcode. 이는 Mac에서만 사용 가능. 따라서 iOS 플랫폼 기반 개발을 하려면 최신 macOS가 지원 가능한 Mac이 있어야 함. 
 
-	=>클라이언트는 시장의 대부분을 차지하고 있는 android와 iOS를 비교, 분석해 보았다. 이 중 앱 개발 환경 등에서 상대적으로 까다롭지 않으며, 더욱 큰 마켓 시장을 보유하고 있는 android를 택하고자 한다.
+=>클라이언트는 시장의 대부분을 차지하고 있는 android와 iOS를 비교, 분석해 보았다. 이 중 앱 개발 환경 등에서 상대적으로 까다롭지 않으며, 더욱 큰 마켓 시장을 보유하고 있는 android를 택하고자 한다.
 
