--- a/클라이언트.md
+++ b/클라이언트.md
@@ -1,5 +1,6 @@
-** 클라이언트
-	1. 안드로이드 : 구글에 의해 개발되고 있는 모바일 운영체제. 자바, 코틀린, C, C++으로 응용프로그램 작성 가능. 
+클라이언트
+
+1. 안드로이드 : 구글에 의해 개발되고 있는 모바일 운영체제. 자바, 코틀린, C, C++으로 응용프로그램 작성 가능. 
 
 	1) 역사
 	2005년 7월 구글이 미국의 작은 안드로이드사 인수: 앤디 루빈이 세운 업체.
