--- a/서버.md
+++ b/서버.md
@@ -1,10 +1,13 @@
 서버
 
 1. Python
+
 	- 역사
 	 네덜란드 귀도 반 로섬이 1989년 12월 구현. 
 	 귀도 반 로섬이 좋아하는 코미디에서 이름을 따옴.
 	 현재 파이썬 3까지 개발.
+	 
+	 
 	- 주요 특징
 	 객체지향 프로그래밍/구조적 프로그래밍 완벽 지원/함수형 프로그래밍/관점지향 프로그래밍 등
 	 동적 타이핑/객체 멤버에 무제한 접근/모듈,클래스,객체와 같은 언어요소가 내부에서 접근할 수 있다.
@@ -15,6 +18,7 @@
 		 네덜란드 출신 컴퓨터 프로그래머. 2005부터 구글에서 일하다 2013년부터 드롭박스에서 일하고 있다.
 
 	1) Flask
+	
 	 파이썬으로 작성된 마이크로 웹 프레임워크. Werkzeug 툴킷과 Jinja2 템플릿 엔진에 기반을 둠. BSD 라이선스.
 	 Armin Ronacher 개발. (2010) 
 	 다양한 웹 엔진과 붙여서 쓸 수 있고 가벼워 Django와 같이 쓰기도 함. 코드도 비교적 단순.
@@ -27,40 +31,45 @@
 		 자유 소프트웨어 저작권. 해당 소프트웨어는 아무나 개작할 수 있고, 수정한 것을 제한 없이 배포할 수 있다.
 
 	2) Django
+	
 	 파이썬으로 작성된 오픈 소스 웹 애플리케이션 프레임 워크. MVC패턴 따르고 있다. 
 	 현재 장고 소프트웨어 재단에 의해 관리되고 있다: 장고 오픈소스 개발 지원을 위해 설립된 비영리 단체. Ex) Instagram
 	
 	a. 역사
+	
 	 로렌스 저널-월드라는 신문사의 인턴 웹 프로그래머였던 에이드리안 홀로바티와 사이먼 윌리슨이 파이썬을 이용해 애플리케이션을 만들기 시작하면서 처음 개발되었다. 당시 이 웹사이트는 PHP기반으로 쓰여졌는데, 홀로바티와 윌리슨은 PHP는 규모가 큰 웹사이트에 적합하지 않다고 생각했고 이를 계기로 파이썬으로 웹 개발을 하기로 결심했다. 하지만 규모가 큰 웹 개발에 적합한 파이썬 도구가 없다는 것을 깨닫고 그들은 장고를 개발하게 되었다. 장고라는 이름은 홀로바티가 좋아하던 집시 재즈 기타리스트인 장고 라인하르트에서 따온 것이다.
 	 장고는 오직 로렌스 웹사이트를 구동하기 위함이었으나, 홀로바티와 위리슨이 로렌스 소유자인 The World Company를 설득하여 오픈 소스로 2005년 7월에 BSD 라이선스로 공개하게 되었다.
 	 이후 장고 소프트웨어 재단이 공식적으로 장고 프로젝트를 관리하게 되었다.
 	 2017년 12월 장고 2.0버전이 출시되었다.
 	
 	b. 특징
+	
 	 웹개발에서 번거로운 요소를 새로 개발할 필요 없이 내장된 기능만을 이용해 빠른 개발을 할 수 있다는 장점이 있다.
 	 장고는 파이썬으로 코딩한 모델을 관계형 DB로 구축해주는 모델, HTTP요청을 처리하는 웹 템플릿 시스템인 뷰, URL의 라우팅을 처리하는 URL 컨트롤러로 구성된 MVC 패턴을 따른다. 이를 모델, 템플릿, 뷰로 분류해 MTV프레임 워크로 보기도 한다.
 	
-	- 모델
+	- 모델: 
 	 데이터에 관한 정보를 담는다. 데이터에 대한 접근, 검증, 작동과 데이터 사이의 관계를 정의하는데, 일반적으로 각각의 모델은 데이터베이스에서 테이블에 해당한다.
 	 장고에서는 모델을 정의할 때 필드의 종류를 지정해줘야 하는데, 이것이 데이터베이스에게 컬럼 타입을 알려주고 HTML 폼으로 표시될 때의 입력 타입도 내포하는 역할을 한다. 또한 장고의 폼 자동 생성 API 를 이용할 때 데이터 검증에 쓰이기도 한다.
 	
-	- 뷰
+	- 뷰: 
 	 어떤 데이터가 표시될 것인지를 정의한다. 뷰는 HTTP 응답(response)를 반환해야 하며 응답의 종류는 웹 페이지, 리디렉션, 문서 등의 다양한 형태가 가능하다.
 	 장고에는 자주 사용되는 형태의 뷰를 패턴화하여 추상화 해둔 재사용 가능한 뷰들을 내장해 놓았는데, 이들을 제네릭 뷰(generic view) 라고 하며 원하는 제네릭 뷰를 상속한 클래스 뷰를 생성하여 사용할 수 있다.
 
-	- 템플릿
+	- 템플릿: 
 	 데이터가 어떻게 표시되는 지를 정의한다. 템플릿은 사용자에게 실제로 보여지는 웹 페이지나 문서를 다룬다.
 	 흔히 HTML에 기반해서 템플릿을 만들며, HTML 에 동적인 요소를 추가하기 위해 파이썬의 일부 기능을 쓰게 도와주는 장고 템플릿 태그가 존재한다.
 	 내장 어플리케이션+다양한 외부패키지(3600개 이상)
 	 공식적으로PostgreSQL, MySQL, SQLite, Oracle 네가지 데이터 베이스 지원.
 
 2. Ruby
+
  스크립트 언어의 일종. 마치모토 유키히로 개발. Python, Perl, Eiffel등의 프로그래밍 언어로부터 일부 문법사항을 계승, 발전하여 일반 목적에 적합하게 만든 언어.
  객체지향 프로그래밍 언어지만 언어의 문법이 쉽고 확장이 편리하여 잘 디자인된 라이브러리를 이용하면 초보자들도 쉽게 다룰 수 있음.
  순수 객체지향: 원시 자료형이 존재하지 않음. 모듈, 메소드 모두 클래스. Open Class로 사용자가 마음대로 수정 가능.
  메타 프로그래밍 지원.
 
 	1) Ruby on Rails
+	
 	 Ruby 사용하는 풀 스택 웹 프레임워크. David Heinemeier Hansson이 오픈소스로 만들었다.
 	 Rails로 인해 Ruby가 대중화되었다고 해도 될 정도로 많은 기여.
 	 커뮤니티가 상당히 높은 수준으로 잘 되어있음. 
@@ -70,15 +79,19 @@
 	 데이터 베이스 작업 시 매우 편리.
 
 	2) Sinatra
+	
 	 Blake Mizerany개발. 
 	 Ruby로 작성된 소프트웨어 웹 응용 프로그램 라이브러리.
 	 MVC패턴을 따르지 않고 최소한의 노력으로 Ruby에서 신속하게 웹 응용 프로그램을 만드는 것에 중점을 둠.
 
 3. Java
+
 	a. 역사
+	
 	 썬 마이크로시스템즈의 제임스 고슬링 제작. 
 	처음에는 가전제품 내 탑재 동작 프로그램 위해 개발, 현재 웹 애플리케이션 개발에 가장 많이 사용, 모바일 기기용 소프트웨어 개발에도 널리 사용.
-	b.	특징
+	b. 특징
+	
 	 자바 개발자들이 유닉스 기반 배경이기 때문에 문법적 특성은 C와 비슷.
 	 객체 지향 방법론, 네트워크 접근기능 필요
 	 가장 큰 특징은 컴파일된 코드가 플랫폼 독립적이라는 점.
@@ -86,6 +99,7 @@
 	 자바로 개발된 프로그램은 CPU나 운영체제 종류 관계없이 JVM 설치가능 시스텝에서는 어디서나 실행가능. =웹 애플리케이션의 특성과 맞아 떨어짐.
 
 	1) JVM(자바 가상머신)
+	
 	 자바 바이트코드를 실행할 수 있는 주체. 자바 바이트코드는 플랫폼에 독립적이며 모든 자바 가상 머신은 자바 가상 머신 규격에 정의된 대로 자바 바이트코드를 실행한다. 따라서 표준 자바 API까지 동일한 동작을 하도록 구현한 상태에서는 이론적으로 모든 자바 프로그램은 CPU나 운영 체제의 종류와 무관하게 동일하게 동작할 것을 보장한다.
 
 	2) 자바 플랫폼은 자바 언어(Java Language), 자바 애플리케이션(Java Application), 자바 애플릿(Java Applet), JRE(Java Runtime Environment), 자바 가상 머신(Java Virtual Machine), 모바일용 자바(Java ME), 자바 웹 스타트(Java Web Start) 등과 함께 단순히 「자바」(Java)라 불리는 경우가 많다.
